- fixed lightbox bug (1px visible at the top)

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -47,7 +47,7 @@ img {
     top: -5px;
     width: 100vw;
     height: 10px;
-    background-color: rgb(0, 0, 0);
+    background-color: red;
   }
 }
 
